# ispring

./: CV.h  Compression.h  Doxyfile  File.h  ISpring.sln  README.md  Verify.h  clean.bat  clean.sh  doxyonly.bat  install_ispring.pl  upload.bat
Debug/: install_ispring.ilk
prj_ISpring/: .gitignore  CMakeLists.txt  ISpring.vcxproj  ISpring.vcxproj.filters  MinGW-test.bat  README.md  a.out  main.cpp  unit_test.h  upload.bat  upload.sh
prj_ISpring/Debug/: vc140.idb
prj_ISpring/Debug/ISpring.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
prj_ISpring/Release/ISpring.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ISpring.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
prj_ISpring/ispring/: All.h  Basic.h  CV.h  Compression.h  Console.h  File.h  System.h  Time.h  Verify.h  Web.h  version_info.txt
prj_ISpring/ispring/Basic/: String.h
prj_ISpring/ispring/CV/: Image.h
prj_ISpring/ispring/Compression/: Zip.h
prj_ISpring/ispring/Console/: xout.h
prj_ISpring/ispring/File/: File.h
prj_ISpring/ispring/Time/: Readme.md  Timer.h
prj_ISpring/ispring/Verify/: Verify.h
prj_ISpring/ispring/modules/: defines.h
prj_ISpring/ispring/modules/Basic/: String.h
prj_ISpring/ispring/modules/CV/: Eval.h  Geometry.h  Image.h  Plot.h  rgb.h
prj_ISpring/ispring/modules/Compression/: Winzip.h  Zip.h
prj_ISpring/ispring/modules/Console/: xout.h
prj_ISpring/ispring/modules/File/: File.h
prj_ISpring/ispring/modules/System/: OS.h
prj_ISpring/x64/Debug/: vc140.idb
(+481 files in other folders)
